# Pet-Contract

./: .gitattributes  .gitignore  README.md
contract-rs/: .gitignore  Cargo.toml  README.md
contract-rs/src/: donation.rs  lib.rs
frontend/: .gitignore  DataContext.jsx  DonationApp.jsx  ProjectDetails.jsx  ProjectsList.jsx  args.json  index.html  index.jsx  near-interface.js  near-wallet.js  package-lock.json  package.json
frontend/assets/: global.css
server/: Cargo.toml
server/src/: db.rs  main.rs
server/src/handlers/: mod.rs
server/src/models/: mod.rs
server/src/routes/: mod.rs
