[package]
name = "dip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = "1.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.34.0"
lazy_static = "1.4.0"
tower-http = { version = "0.5.2", features = ["cors"] }
tower = "0.4.13"